# omniswap

./: Cargo.toml  README.md
src/: lib.rs  replace.rs  swap.rs  take.rs
tests/: test_replace.rs  test_swap.rs  test_take.rs
